src/test/ui/object-safety/object-safety-by-value-self-use.stderr
error[E0161]: cannot move a value of type (dyn Bar + 'static): the size of (dyn Bar + 'static) cannot be statically determined
  --> $DIR/object-safety-by-value-self-use.rs:15:5
   |
LL |     t.bar() //~ ERROR cannot move a value of type (dyn Bar + 'static)
   |     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0161`.
